--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 :root{
   --blue-color: #5783db;
   --green-color: #55c2da;
@@ -27,4 +26,15 @@
   border: #fff;
 }
 
+/*All form animation*/
+.form-animation__header {
+  transition: all 0.3s ease-out;
+  opacity: 0;
+  transform: scale(0.5);
+  z-index: 9999;
+}
 
+.form-animation__header.animate {
+  opacity: 1;
+  transform: scale(1);
+}
