Home page modified added filter by subcategories and styling

--- a/src/pages/Ad.css
+++ b/src/pages/Ad.css
@@ -4,12 +4,14 @@
   opacity: .12;
 }
 
-
-
-#carouselExample {
+#carousselDetail{
   position: relative;
 }
+.carousel-inner{
+  margin: 10px 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 
+}
 .carousel-control-prev,
 .carousel-control-next {
   top: 50%;
@@ -46,9 +48,6 @@
   border: 0;
   border-top: 1px solid #ccc;
 }
-
-
-
 .small-image {
   margin: 0 5px;
   cursor: pointer;
@@ -61,11 +60,19 @@
   opacity: 1;
 }
 
-
-
 .img-loaded {
   opacity: 1;
 }
+.card{
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
+.card-container__content{
+  background-color: rgba(240, 248, 255, 0.953);
+  padding: 12px;
+  border-radius: none;
+}
+
  @media (max-width:600px) {
 .card-text-water__mark::after {
     bottom: 40%;
