--- a/src/pages/Ad.css
+++ b/src/pages/Ad.css
@@ -7,11 +7,6 @@
 #carousselDetail{
   position: relative;
 }
-.carousel-inner{
-  margin: 10px 0;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
-
-}
 .carousel-control-prev,
 .carousel-control-next {
   top: 50%;
@@ -71,6 +66,11 @@
   background-color: rgba(240, 248, 255, 0.953);
   padding: 12px;
   border-radius: none;
+}
+.heart {
+  top: 10px;
+  right: 10px;
+  z-index: 1;
 }
 
  @media (max-width:600px) {
