--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,4 +24,32 @@ li.subcategory{
   background-color: #1e1d1dbc;
   color: #f1f1f1;
 }
+.remove-all-container{
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.remove-all_filter{
+  background-color: #f8d7da;
+  padding: 15px auto;
+}
+.remove-all_filter:hover {
+  background-color: #b0525a95;
+  color: #fefefe;
+}
 
+.navbar-nav .dropdown-menu {
+  padding: 0.5rem 0;
+}
+
+.navbar-nav .dropdown-menu li {
+  margin: 0.25rem 0;
+}
+
+.navbar-nav .dropdown-menu li a {
+  font-size: 0.9rem;
+  color: #212529;
+}
+
+.navbar-nav .dropdown-menu li a:hover {
+  color: #0d6efd;
+}
