Created the edit component and functionality and some more pages modifications

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,6 @@
-.subcategory-container{
-  
+
+.category-container{
+  margin-top: 7rem!important;
 }
 .display-category__name {
   font-size: 19px;
