--- a/src/pages/MyFavorites.css
+++ b/src/pages/MyFavorites.css
@@ -1,3 +1,8 @@
+
+.form-animation__header{
+  margin-top: 5rem ;
+}
+
 @media (max-width:600px) {
   .single-card__favorite:first-of-type {
     margin-top: -13rem;
