--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,6 +1,6 @@
 .big-container__card {
   background-color: rgba(240, 248, 255, 0.196);
-  margin: 0 auto;
+  margin: 7rem auto !important;
 }
 
 .card-display {
