Working on Seller security

--- a/src/pages/Ad.css
+++ b/src/pages/Ad.css
@@ -73,6 +73,53 @@
   z-index: 1;
 }
 
+.container-Ad{
+  margin-top: 6rem !important;
+}
+.show-contact__chat {
+  border: solid 1px #4ec1db;
+  background-color: #f9f9f9;
+  color: #0890ae;
+  padding: 12px;
+  border-radius: 50px;
+
+}
+.show-contact__chat:hover{
+  background-color: #4ec1db;
+  border: none;
+}
+.show-contact {
+  border: solid 1px #4ec1db;
+  background-color: #f9f9f9;
+  color: #0890ae;
+  border-radius: 50px;
+    padding: 12px;
+}
+
+.show-contact:hover {
+  background-color: #4ec1db;
+  border: none;
+}
+
+ @media (max-width:1020px) {
+  .container-chat_showContact{
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    text-align: center;
+  }
+ }
+    @media (max-width:600px) {
+      .container-chat_showContact {
+        flex-direction: row;
+      }
+    }
+ @media (max-width:1020px){
+  .seller-description {
+      flex-direction: column;
+    }
+ }
+
  @media (max-width:600px) {
 .card-text-water__mark::after {
     bottom: 40%;
