--- a/src/pages/Ad.css
+++ b/src/pages/Ad.css
@@ -27,14 +27,15 @@
 }
 
 .small-image img {
-  width: 60px;
-  height: 60px;
+  width: 90px;
+  height: 80px;
   object-fit: cover;
-  border: 2px solid #fff;
+  border: 2px solid #c6c3c3f7;
+  border-radius: 7px;
 }
 
 .small-image.active img {
-  border-color: #007bff;
+  border-color: #f2f3f3;
 }
 
 .ad-description hr {
@@ -48,6 +49,11 @@
   cursor: pointer;
   opacity: 0.5;
   transition: opacity 0.2s ease-in-out;
+  
+}
+.isSold-stillAvailable__button{
+  bottom: 0;
+  margin: 0 auto;
 }
 
 .small-image:hover,
@@ -99,6 +105,9 @@
 .show-contact:hover {
   background-color: #4ec1db;
   border: none;
+}
+.isSold-button{
+  padding: 0.5rem 1rem 2rem !important;
 }
 
  @media (max-width:1020px) {
