--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,4 +1,3 @@
-
 .big-container__card {
   background-color: rgba(240, 248, 255, 0.196);
   margin: 7rem auto !important;
@@ -47,14 +46,22 @@
   color: rgba(247, 36, 36, 0.974);
 }
 
+.user-name {
+  font-size: 36px;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
 
 @media (max-width: 1200px) {
   .container-profile_image {
     width: 100%;
   }
-     .noAdds-from__user {
-      margin-top: 12rem;
-     }
+
+  .noAdds-from__user {
+    margin-top: 12rem;
+  }
 
   .card-img__content {
     width: 100% !important;
